IOC 컨테이너 추가

--- a/ConsoleAutoFac/ConsoleAutoFac.csproj
+++ b/ConsoleAutoFac/ConsoleAutoFac.csproj
@@ -6,9 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\LibA\LibA.csproj" />
-    <ProjectReference Include="..\LibB\LibB.csproj" />
-    <ProjectReference Include="..\LibC\LibC.csproj" />
+    <PackageReference Include="Autofac" Version="4.9.4" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LibD\LibD.csproj" />
   </ItemGroup>
 
